--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-root-import": "^4.1.8",
+    "css-loader": "^0.28.9",
     "eslint": "^4.18.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
@@ -49,6 +50,8 @@
     "eslint-plugin-react": "^7.7.0",
     "html-webpack-plugin": "^2.30.1",
     "prettier": "^1.10.2",
+    "style-loader": "^0.20.2",
+    "url-loader": "^0.6.2",
     "webpack": "^3.11.0"
   }
 }
