--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "express": "^4.16.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "styled-jsx": "^2.2.5",
     "webpack-config-utils": "^2.3.0"
   },
