--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "simple-id": "^1.0.0",
     "styled-jsx": "^2.2.5",
     "webpack-config-utils": "^2.3.0"
   },
