--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/chicus12/bonappetit#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-preset-react-hmre": "^1.1.1",
     "express": "^4.16.2",
     "react": "^16.2.0",
